plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'

    // NeoForge 开发插件
    id 'net.neoforged.moddev' version '2.0.141'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

version = mod_version
group = mod_group_id

base {
    archivesName = "${mod_id}-${minecraft_version}-neoforge"
}

repositories {
    mavenCentral()
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
}

neoForge {
    version = neo_version

    parchment {
        minecraftVersion = parchment_minecraft_version
        mappingsVersion = parchment_mappings_version
    }

    runs {
        client {
            client()
        }
        server {
            server()
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

dependencies {
    implementation(files("libs/touhoulittlemaid-2.0.0-neoforge+mc26.1.2-snapshot.jar"))
    compileOnly(files("libs/touhoulittlemaid-2.0.0-neoforge+mc26.1.2-sources.jar"))
}

processResources {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_credits            : mod_credits,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties + [project: project]
    }
}

jar {
    manifest {
        attributes([
                "Implementation-Title"  : project.name,
                "Implementation-Version": "${version}"
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.compileJava {
    // Force recompilation to ensure clean class files
    outputs.upToDateWhen { false }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
